# agata_bot

./: CMakeLists.txt  build.sh  convert_images_new.py  convert_images_sd.py  partitions.csv  sdkconfig.old  tiden-webhook-test.txt
.github/: copilot-instructions.md
.github/instructions/: copilot.instructions.md
components/driver/: CMakeLists.txt  Display_ST7789.h  LVGL_Driver.cpp  LVGL_Driver.h  st7789_display.c  st7789_display.h
components/lvgl/: CMakeLists.txt  lv_conf.h
driver/: CMakeLists.txt  LVGL_Driver.cpp  st7789_display.c  st7789_display.h
main/: CMakeLists.txt  CMakeLists_sd.txt  CMakeLists_static.txt  main.c  main_broken.c  main_lvgl.c  main_static.c  sd_card.c  sd_card.h  sd_images.c  sd_images.h
main/images/: hi_1.c  hi_10.c  hi_11.c  hi_12.c  hi_13.c  hi_2.c  hi_3.c  hi_4.c  hi_5.c  hi_6.c  hi_7.c  hi_8.c  hi_9.c  images.c  images.h  init_1.c  init_10.c  init_11.c  init_12.c  init_13.c  init_14.c  init_15.c  init_16.c  init_17.c  init_18.c  init_2.c  init_3.c  init_4.c  init_5.c  init_6.c  init_7.c  init_8.c  init_9.c
sd_images/hi/: hi_1.raw  hi_10.raw  hi_11.raw  hi_2.raw  hi_3.raw  hi_4.raw  hi_5.raw  hi_6.raw  hi_7.raw  hi_8.raw  hi_9.raw
sd_images/init/: init_1.raw  init_10.raw  init_11.raw  init_12.raw  init_13.raw  init_14.raw  init_15.raw  init_16.raw  init_17.raw  init_2.raw  init_3.raw  init_4.raw  init_5.raw  init_6.raw  init_7.raw  init_8.raw  init_9.raw
