idf_component_register(SRCS "main.c" 
                           "images/images.c"
                           # Init animation images
                           "images/init_1.c"
                           "images/init_2.c"
                           "images/init_3.c"
                           "images/init_4.c"
                           "images/init_5.c"
                           "images/init_6.c"
                           "images/init_7.c"
                           "images/init_8.c"
                           "images/init_9.c"
                           "images/init_10.c"
                           "images/init_11.c"
                           "images/init_12.c"
                           "images/init_13.c"
                           "images/init_14.c"
                           "images/init_15.c"
                           "images/init_16.c"
                           "images/init_17.c"
                           "images/init_18.c"
                           # Hi animation images
                           "images/hi_1.c"
                           "images/hi_2.c"
                           "images/hi_3.c"
                           "images/hi_4.c"
                           "images/hi_5.c"
                           "images/hi_6.c"
                           "images/hi_7.c"
                           "images/hi_8.c"
                           "images/hi_9.c"
                           "images/hi_10.c"
                           "images/hi_11.c"
                    INCLUDE_DIRS "." "images"
                    REQUIRES esp_timer lvgl driver nvs_flash)